--- a/.github/workflows/sonar-ci.yaml
+++ b/.github/workflows/sonar-ci.yaml
@@ -1,7 +1,8 @@
 name: SonarCloud
 on:
-  #schedule:
+  schedule:
   #- cron: "*/5 * * * *"
+  - cron: "0 8 * * *"
   push:
     branches:
       - main
